--- a/Flask_portofolio2/templates/base.html
+++ b/Flask_portofolio2/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about_me.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/portofolio.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/services.css') }}">
